# runscope

./: .gitignore  AGENTS.md  Cargo.toml  README.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  state.rs
apps/desktop/src-tauri/src/commands/: baselines.rs  compare.rs  mod.rs  regression_rules.rs  runs.rs  system.rs
crates/runscope-cli/: Cargo.toml
crates/runscope-cli/src/: cli.rs  main.rs
crates/runscope-cli/src/commands/: ingest.rs  mod.rs  record.rs
crates/runscope-core/: Cargo.toml
crates/runscope-core/migrations/: 0001_init.sql
crates/runscope-core/schema/: run.v1.schema.json
crates/runscope-core/src/: error.rs  lib.rs
crates/runscope-core/src/adapters/: detect.rs  faceapp.rs  localagent.rs  mod.rs  traits.rs  videoforge.rs
crates/runscope-core/src/db/: connection.rs  migrations.rs  mod.rs
crates/runscope-core/src/domain/: compare.rs  mod.rs  query.rs  run_manifest.rs  scope.rs  warning.rs
crates/runscope-core/src/schema/: generate.rs  mod.rs
crates/runscope-core/src/services/: baselines.rs  compare.rs  ingest.rs  mod.rs  paths.rs  query.rs  record.rs  regression_rules.rs
crates/runscope-core/src/store/: artifact_store.rs  hashing.rs  layout.rs  mod.rs
crates/runscope-core/tests/: baselines.rs  compare.rs  ingest.rs  query.rs  regression_rules.rs
crates/runscope-core/tests/fixtures/faceapp/basic/: faceapp_benchmark.json
crates/runscope-core/tests/fixtures/localagent/basic/: localagent_run.json
ui/: index.html  package.json  (+2 more)
(+10 files in other folders)
