[package]
name = "runscope-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rusqlite = { version = "0.32.1", features = ["bundled"] }
schemars = { version = "0.8.21", features = ["chrono"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sha2 = "0.10.8"
thiserror = "2.0.12"
time = { version = "0.3.39", features = ["formatting", "parsing"] }
ulid = "1.2.1"

[dev-dependencies]
tempfile = "3.17.1"
