[package]
name = "runscope-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "runscope_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
runscope-core = { path = "../../../crates/runscope-core" }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tauri = { version = "2.10.3", features = [] }
